# CMakeTutorial

./: .gitignore  CMakeLists.txt  README.MD  build_debug.sh  build_release.sh  clean_debug.sh  clean_release.sh  config_debug.sh  config_release.sh  install_debug.sh  install_release.sh
cmake/: TestLibConfig.cmake.in  utils.cmake
cmake_cmds/: CMakeLists.txt
cmake_cmds/part1_variables/: CMakeLists.txt
cmake_cmds/part1_variables/cmd1/: CMakeLists.txt
cmake_cmds/part2_flow_control/: CMakeLists.txt
installation/: CMakeLists.txt
lib/: CMakeLists.txt
lib/header_only/: CMakeLists.txt  test_lib_c.h
lib/shared/: CMakeLists.txt  test_lib_b.cpp  test_lib_b.h
lib/shared/part_1/: CMakeLists.txt  test_lib_b1.cpp  test_lib_b1.h
lib/shared/part_2/: CMakeLists.txt  test_lib_b2.cpp  test_lib_b2.h  test_lib_b3.cpp  test_lib_b3.h
lib/shared/part_3/: CMakeLists.txt  test_lib_b4.h
lib/static/: CMakeLists.txt  test_lib_a.cpp  test_lib_a.h
lib/static/feature_1/: CMakeLists.txt  test_lib_a.cpp
lib/static/feature_2/: test_lib_a.cpp
src/: test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp
test/: CMakeLists.txt  unit_test3.cpp
